Arvind: removal of depricated APIs.